# LMPool

./: .gitignore  LICENSE  README.md
AevRL/: README.md  pyproject.toml
AevRL/configs/: gsm8k.yaml  simple_math.yaml
AevRL/environments/: gsm8k.py  simple_math.py
AevRL/src/algo/: base.py  grpo.py
AevRL/src/rl/: rollout.py  train.py
AevRL/src/utils/: client.py  config.py  loaders.py  torch_utils.py  vllm.py
GPT/: README.md
GPT/chapters/: 00_overview.md  01_setup.md  02_tokenization.md  03_embeddings.md  04_positional_encoding.md  05_attention.md  06_transformer_block.md  07_gpt_model.md  08_training.md  09_inference.md  10_full_script.md  11_glossary.md
Others/Fine-Tuning/: README.md
Others/Quantization/: README.md
Others/SelfOptimizer-Inference/: .gitignore  README.md  inference.py  prepare.py  requirements.txt
Transformers/: 01_modern_gpt_overview.md  02_training_batches.md  03_model_config_and_shapes.md  04_token_embeddings_and_lm_head.md  05_next_token_cross_entropy_loss.md  06_generate_tokens_one_at_a_time.md  07_rmsnorm.md  08_queries_keys_values.md  09_rope.md  10_causal_self_attention.md  11_multi_head_attention.md  12_swiglu_mlp.md  13_transformer_block.md  14_tiny_gpt_model.md  15_training_loop.md  16_validation_and_sampling.md  17_checkpointing.md  18_kv_cache.md
microAR/: README.md  micGPT_BAR.py  micGPT_FAR.py  reduce_hybridTrain.py
miniDeepseek/: .gitignore  README.md  __init__.py  requirements.txt  rl_train.py  train.py
miniLLM/: README.md  main.py  miniLLM.ipynb  requirements.txt
miniMamba/: mamba.py  mamba_mini.py  pscan.py
(+38 files in other folders)
